--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "build:server": "tsc server/server.ts --outDir dist-server --module commonjs --target es2020 --esModuleInterop --resolveJsonModule",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "keywords": [
     "p2p",
@@ -29,10 +31,13 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.5",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.8"
