ignore all automatically generated js files

--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,11 @@ dist-server/
 build/
 
 # Compiled JavaScript files (generated from TypeScript)
-*.js
+# Exclude .js files in src/ and client/src/ directories (compiled from .ts)
+/src/**/*.js
+/client/src/**/*.js
+
+# Keep legitimate config files
 !jest.config.js
 !vite.config.js
 !scripts/**/*.js
