--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "preview": "vite preview",
     "test": "jest",
     "test:watch": "jest --watch",
+    "experiments": "tsx scripts/run-experiments.ts",
+    "analyze": "python3 analysis/analyze_results.py",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\""
   },
